--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
 <link rel="stylesheet" href="style.css">
 <body>
     <!-- header area start -->
-   
+    <div class="menu-menu">
+        <ul>
+            <li><a href="">home</a></li>
+            <li ><a href="">about</a></li>
+            <li id="active"><a href="">Recipe</a></li>
+            <li><a href="">Order</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </div>
     <header class="container" >
+        
         <div class="half-width header-left-side">
             <h2> 
                 <span>Skip</span> The Diet,<br>
